cloudformation/udcap-hub.yml
Description: >
  Simon Wall / MoopyGlue

Parameters:
  networkStack:
      Description: Single Parameter that we are passing with the env name.
      Type: String
      Default: "udcap-base"

Resources:

  #===============================================================
  # Security Groups
  #===============================================================

  SGHub:
    Type: AWS::EC2::SecurityGroup
    Properties: 
        VpcId:
          Fn::ImportValue: !Sub "${networkStack}-vpcid"
        GroupDescription: Security Group Hub Host
        SecurityGroupIngress:
        - IpProtocol: tcp  # ssh access to hub host from single IP
          FromPort: 22
          ToPort: 22
          CidrIp: 82.34.193.156/32
        - IpProtocol: tcp  # ssh access to hub host from single IP
          FromPort: 7777
          ToPort: 7777
          CidrIp: 10.0.0.0/16
        SecurityGroupEgress:
        - IpProtocol: tcp # ssh access to stack servers
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0            

  Hub:
    Type: AWS::EC2::Instance
    Properties: 
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          apt update -y
          export DEBIAN_FRONTEND=noninteractive
          apt upgrade -y
          sudo snap install kubectl --classic
          sudo snap install aws-cli --classic
      # Amazon Image ami-003634241a8fcdec0 : Ubuntu Server 18.04 LTS
      # NOTE: this image uses account 'ubuntu' instead of 'ec2-user'
      ImageId: ami-003634241a8fcdec0
      KeyName: udcap-ssh-hub
      InstanceType: t3.micro
      SecurityGroupIds : [ !GetAtt SGHub.GroupId ]
      SubnetId: 
        Fn::ImportValue: !Sub "${networkStack}-hub-subnet"
      BlockDeviceMappings:
      - DeviceName: "/dev/sdk"
        Ebs:
          VolumeSize: '10'

Outputs:

  HubDNS:
      Description: A reference to the software external URL for thsi cluster
      Value: !GetAtt Hub.PublicDnsName
      Export:
          Name: !Sub ${networkStack}-hub-dns

  HubPubIp:
      Description: A reference to the software external URL for thsi cluster
      Value: !GetAtt Hub.PublicIp
      Export:
          Name: !Sub ${networkStack}-hub-pubip

  HubPrivIp:
      Description: A reference to the software external URL for thsi cluster
      Value: !GetAtt Hub.PrivateIp
      Export:
          Name: !Sub ${networkStack}-hub-privip
